# ktprime

./: CMakeLists.txt  FastGn.cpp  FastTn  FastTn.cpp  Goldbach partition  Goldbach partition.cpp  Goldbach.cpp  Help.md  Ktprime.cpp  LICENSE  PrimeNumber.cpp  README  README.md  SophieGermain  SophieGermain.cpp  TwinPrime.cpp  abx.cpp  bench_ordered_patch_map.cpp  composites ending in 1  d-ary.h  e:\rank\bench_ordered_patch_map.cpp  ehash_lru.h  ehash_set.hpp  ehash_table.hpp  hash_set.hpp  hash_table.cpp  hash_table4.hpp  hash_table5.hpp  hash_table6.hpp  hash_table7.hpp  hash_table_link.hpp  hash_test.cpp  topK.cpp  wheel_timer.cpp  wheel_timer.h
